unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Settings__c/pse__Revenue_Forecast_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Deprecated:Stores the settings used by batch Apex jobs for revenue forecasts.</description>
    <label>Deprecated:Revenue ForecastBatchSettings</label>
</CustomObject>