unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Settings__c/fields/pse__Notifications_Email__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, notifications from revenue forecast batch processes are sent via email to recipients listed in the Notification Recipients setting.</description>
    <inlineHelpText>If selected, notifications from revenue forecast batch processes are sent via email to recipients listed in the Notification Recipients setting.</inlineHelpText>
    <label>Deprecated:Notifications by Email</label>
    <type>Checkbox</type>
</CustomField>