unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Settings__c/fields/pse__Notifications_Recipients__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Recipients__c</fullName>
    <description>Specifies the notification recipients for revenue forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;).</description>
    <inlineHelpText>Specifies the notification recipients for revenue forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;).</inlineHelpText>
    <label>Deprecated:Notification Recipients</label>
    <type>TextArea</type>
</CustomField>