unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Settings__c/fields/pse__Notifications_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, notifications from revenue forecast batch processes are sent via tasks.</description>
    <inlineHelpText>If selected, notifications from revenue forecast batch processes are sent via tasks.</inlineHelpText>
    <label>Deprecated:Notifications by Task</label>
    <type>Checkbox</type>
</CustomField>